Updated live link

--- a/index.html
+++ b/index.html
@@ -3,17 +3,17 @@
     <title>REDIRECT</title>
     <meta
       http-equiv="refresh"
-      content="0; url=https://juhair-cupcake.github.io/ThreeJS-Project-Echo/static/index.html"
+      content="0; url=https://juhair-cupcake.github.io/ThreeJS-Project-Echo/static/index"
     />
     <script type="text/javascript">
       window.location.href =
-        "https://juhair-cupcake.github.io/ThreeJS-Project-Echo/static/index.html";
+        "https://juhair-cupcake.github.io/ThreeJS-Project-Echo/static/index";
     </script>
   </head>
   <body>
     <h1>
       <a
-        href="https://juhair-cupcake.github.io/ThreeJS-Project-Echo/static/index.html"
+        href="https://juhair-cupcake.github.io/ThreeJS-Project-Echo/static/index"
         >VISIT</a
       >
     </h1>
