--- a/static/index.html
+++ b/static/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Echo</title>
+    <title>EchoLogicless</title>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link
@@ -34,6 +34,50 @@
             world!
           </p>
         </div>
+      </section>
+      <section class="location">
+        <div class="location-wrapper">
+          <h3>Find your Trusted Corporate কামলা here!</h3>
+          <div class="icon">
+            <svg
+              fill="#ffffff"
+              version="1.1"
+              id="Capa_1"
+              xmlns="http://www.w3.org/2000/svg"
+              xmlns:xlink="http://www.w3.org/1999/xlink"
+              viewBox="0 0 395.71 395.71"
+              xml:space="preserve"
+              data-darkreader-inline-fill=""
+              style="
+                --darkreader-inline-fill: #181a1b;
+                --darkreader-inline-stroke: #e8e6e3;
+              "
+              stroke="#ffffff"
+              data-darkreader-inline-stroke=""
+            >
+              <g id="SVGRepo_bgCarrier" stroke-width="0"></g>
+              <g
+                id="SVGRepo_tracerCarrier"
+                stroke-linecap="round"
+                stroke-linejoin="round"
+                stroke="#CCCCCC"
+                stroke-width="3.16568"
+                data-darkreader-inline-stroke=""
+                style="--darkreader-inline-stroke: #c8c3bc"
+              ></g>
+              <g id="SVGRepo_iconCarrier">
+                <g>
+                  <path
+                    d="M197.849,0C122.131,0,60.531,61.609,60.531,137.329c0,72.887,124.591,243.177,129.896,250.388l4.951,6.738 c0.579,0.792,1.501,1.255,2.471,1.255c0.985,0,1.901-0.463,2.486-1.255l4.948-6.738c5.308-7.211,129.896-177.501,129.896-250.388 C335.179,61.609,273.569,0,197.849,0z M197.849,88.138c27.13,0,49.191,22.062,49.191,49.191c0,27.115-22.062,49.191-49.191,49.191 c-27.114,0-49.191-22.076-49.191-49.191C148.658,110.2,170.734,88.138,197.849,88.138z"
+                  ></path>
+                </g>
+              </g>
+            </svg>
+          </div>
+        </div>
+      </section>
+      <section class="footer">
+        <a href="https://juhair-dev.netlify.app/">Made By Juhair Islam</a>
       </section>
     </main>
   </body>
