--- a/static/index.html
+++ b/static/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>EchoLogicless</title>
+    <title>Echologyx</title>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link
@@ -37,7 +37,7 @@
       </section>
       <section class="location">
         <div class="location-wrapper">
-          <h3>Find your Trusted Corporate কামলা here!</h3>
+          <h3>From Bangladesh to global support</h3>
           <div class="icon">
             <svg
               fill="#ffffff"
